Fix button positioning issue on mobile landing page

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -63,7 +63,7 @@ html body {
         }
     }
     .btn--homepage {
-        width: 40vw;
+        width: calc(50% - 20px);
         background-color: $teal;
         color: $white;
         padding: 10px 10px 12px;
@@ -72,10 +72,12 @@ html body {
         border: 2px solid $teal;
         font-weight: 500;
         font-size: 16px;
+        box-sizing: border-box;
 
         & + .btn--homepage {
-            margin-left: 15px;
+            margin-left: 20px;
         }
+
         &:hover {
             text-decoration: none;
         }
