--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -586,6 +586,7 @@ textarea {
     left: 0;
     bottom: 15vh;
     z-index: 10;
+    padding: 0 20px;
 }
 .disclaimer--us-only {
     font-size: $xs;
